# npong

./: .gitignore  CMakeLists.txt  knowhow.txt  libs.txt
distribution/: pong
distribution/files/: gameover.tga  keycode-table.txt  keymap.txt  readme.txt  shapes.vsh  snake.tga
source/2.0/: CGL_FramebufferObject.cpp  CGL_NGO_BlurShader.cpp  CGL_NGO_BlurShader.h  CGL_NGO_Shader.cpp  CGL_NGO_Shader.h  NGLprimitives.cpp
source/cgl/: CGL_Application.cpp  CGL_Application.h  CGL_BitmapFont.cpp  CGL_BitmapFont.h  CGL_Camera.cpp  CGL_Camera.h  CGL_Circle.cpp  CGL_Circle.h  CGL_Disk.cpp  CGL_Disk.h  CGL_Ellipsoid.cpp  CGL_Ellipsoid.h  CGL_FontTableau.cpp  CGL_FontTableau.h  CGL_FramebufferObject.cpp  CGL_FramebufferObject.h  CGL_GLU_Object.cpp  CGL_GLU_Object.h  CGL_GLU_Sphere.cpp  CGL_GLU_Sphere.h  CGL_MatObject.cpp  CGL_MatObject.h  CGL_Object.cpp  CGL_Object.h  CGL_OpenGL.cpp  CGL_OpenGL.h  CGL_Patch.cpp  CGL_Patch.h  CGL_Patch2d.cpp  CGL_Patch2d.h  CGL_Ring.h  CGL_SaveScreen.cpp  CGL_SaveScreen.h  CGL_Texture.cpp  CGL_Texture.h  CGL_include.h  NGLprimitives.cpp  NGLprimitives.h
source/file/: CFileIO.cpp  CFileIO.h  CFilemapping.cpp  CFilemapping.h  EFileTypes.h  SFileReadInfo.h
source/global/: GSystemFunctions.h  GlobalDebug.cpp  GlobalDebug.h  GlobalSystemFunctions.cpp  GlobalSystemFunctions.h  GlobalWindow.h
source/graflib/: CDataRect.h  CDataRect.hpp  CGraflib.cpp  CGraflib.h  CGraflibJpeg.cpp  CGraflibJpeg.h  CGraflibPng.cpp  CGraflibPng.h  CGraflibTga.cpp  CGraflibTga.h  CGraphicsJpeg.cpp  CGraphicsJpeg.h  COpenGL.cpp  COpenGLAction.cpp  CPixel.h  CPixel24.cpp  CPixel24.h  CPixel24fixT.h  CPixel32.cpp  CPixel32.h  PnglibInterface.h
source/mvpng/: mv_graphics_png.c  mv_graphics_png.h
source/pong/: CAngle.h  CBaitUnit.cpp  CBaitUnit.h  CBoundingObject.cpp  CBoundingObject.h  CDebisUnit.h  CDebrisUnit.cpp  CDebrisUnit.h  CEnemyUnit.cpp  CEnemyUnit.h  CExplosion.cpp  CExplosion.h  CGLApplication.cpp  CGLApplication.h  CGL_Application.cpp  CGame_Read.cpp  COpenAL.cpp  COpenAL.h  COpenGL.cpp  COpenGL.h  COpenGLAction.cpp  CPlayerUnit.cpp  CPlayerUnit.h  CPlayfieldSegment.h  CPolylineObject.cpp  CPolylineObject.h  CPong.cpp  CPong.h  CPongPlayer.h  CSdlApp.cpp  (+23 more)
(+93 files in other folders)
